welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur())
  ^SnakeBuggle:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  	if(getDirection() == Direction.EST){
        ^SnakeBuggle:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  	if(getDirection() == Direction.OUEST){
        ^SnakeBuggle:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return(x)
  ^